fix for 'No service for type 'fake_fastgithub.HttpServer.Certs.CertService' has been registered.

--- a/fake_fastgithub.HttpServer/fake_fastgithub.HttpServer.csproj
+++ b/fake_fastgithub.HttpServer/fake_fastgithub.HttpServer.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Yarp.ReverseProxy" Version="2.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\fake_fastgithub.Configuration\fake_fastgithub.Configuration.csproj" />
   </ItemGroup>
 
