--- a/fake_fastgithub/fake_fastgithub.csproj
+++ b/fake_fastgithub/fake_fastgithub.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DNS" Version="7.0.0" />
     <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
   </ItemGroup>
 
