for file: appsettings.github.json

--- a/fake_fastgithub/appsettings.json
+++ b/fake_fastgithub/appsettings.json
@@ -1,9 +1,64 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"FastGithub": {
+		// 用于解析位于 DomainConfigs 的域名
+		"PureDns": {
+			"IPAddress": "127.0.0.1",
+
+			// 5533 指向 dnscrypt-proxy
+			"Port": 5533
+		},
+
+		// 用于解析不在 DomainConfigs 的域名
+		"FastDns": {
+			"IPAddress": "114.114.114.114",
+			"Port": 53
+		},
+
+		"DomainConfigs": {
+			// 域名的 * 表示除 . 之外零到多个任意字符
+			"*.x.y.z.com": {
+				// 指示 tls 握手时是否发送 SNI
+				"TlsSni": false,
+
+				// @domain 变量表示取域名值
+				// @ipaddress 变量表示取 ip
+				// @random 变量表示取随机值，其它字符保留不替换
+				"TlsSniPattern": null,
+
+				// 是否忽略服务器证书域名不匹配
+				// 当不发送 SNI 时服务器可能发回域名不匹配的证书，默认为 false
+				"TlsIgnoreNameMismatch": false,
+
+				// 请求超时时长，格式为 "00:02:00"，默认为 null
+				"Timeout": null,
+
+				// 请求的 ip，默认为 null
+				"IPAddress": null,
+
+				// 请求目的地，格式为绝对或相对 Uri，默认 null
+				"Destination": null,
+
+				// 阻断请求直接响应，设置了 Response 其它配置都不起作用了
+				"Response": {
+					// 响应的状态码
+					"StatusCode": 404,
+
+					// 如果有 ContentValue，就要指示 ContentType
+					"ContentType": "text/plain;charset=utf-8",
+
+					// 自定义返回的内容，这是可选的
+					"ContentValue": "这是一个用于示范配置的域名"
+				}
+			}
+		}
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Yarp": "Warning",
+			"System": "Warning",
+			"Microsoft": "Warning",
+			"Microsoft.AspNetCore.Server.Kestrel": "Error"
+		}
+	}
 }
