--- a/fake_fastgithub/fake_fastgithub.csproj
+++ b/fake_fastgithub/fake_fastgithub.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="DNS" Version="7.0.0" />
     <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
+    <PackageReference Include="Yarp.ReverseProxy" Version="2.1.0" />
   </ItemGroup>
 
 </Project>
